--- a/app/assets/stylesheets/components/_library.scss
+++ b/app/assets/stylesheets/components/_library.scss
@@ -28,12 +28,12 @@
     overflow:hidden;
 }
 
-.container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
+// .container {
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   margin-right: auto;
+//   margin-left: auto;
+// }
 
 
 .container.carousel-inner {
