--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,5 +1,5 @@
 <div class="cta">
-   <h2>Export your customized playlist to Spotify</h2>
+   <h2>Export tracks to Spotify as playlist</h2>
    <!-- s -->
 </div>
 <div class="container">
