--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,12 @@
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span><%= image_tag current_user.image_url, class: "avatar dropdown-toggle", 'aria-haspopup': true, 'aria-expanded': false %></span>
+    <% if current_user.nil? %>
+      <% image_src = "user_1.png" %>
+    <% else %>
+      <% current_user.image_url.nil? ? image_src = "user_1.png" : image_src =current_user.image_url %>
+    <% end %>
+    <span><%= image_tag image_src, class: "avatar dropdown-toggle", 'aria-haspopup': true, 'aria-expanded': false %></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
