front end tweaks

--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -22,7 +22,8 @@
 </div>
 
 <div class="cta">
-   <h2>Recommended events nearby in coming week</h2>
+   <h3>Upcoming events nearby</h3>
+   <h4>Recommended for you</h4>
 
 </div>
 
