--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -8,7 +8,26 @@
 
 }
 
+.cta h4 {
+  font-size: 17px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  color: $white;
+  opacity: 0.6;
 
+}
+
+.cta h3 {
+  font-size: 23px;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  color: #E4C1F9;
+
+}
 
 .cta h2 {
   font-size: 23px;
