--- a/app/views/shared/_library.html.erb
+++ b/app/views/shared/_library.html.erb
@@ -2,13 +2,13 @@
   <div class="card-product-event-infos">
     <h2 class="max-lines"><%= locals[:track].name %></h2>
       <h1 class="max-lines"><%= locals[:track].artists.map {|artist| artist.name }.join(", ") %></h1>
-      <em><p><%= "Starred at #{locals[:track].events.first.artist}'s concert" %></p></em>
+      <em><p><%= "Added at #{locals[:track].events.first.artist} concert" %></p></em>
 
       <% unless locals[:likes].nil? %>
         <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
       <% end %>
   </div>
-  <% unless locals[:track].artists.empty? %>      
+  <% unless locals[:track].artists.empty? %>
     <% if locals[:track].artists.first.photo.attached? %>
       <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
     <% else %>
