--- a/app/assets/stylesheets/components/_library.scss
+++ b/app/assets/stylesheets/components/_library.scss
@@ -27,7 +27,7 @@
 
 /* control image height */
 .card-img-top-250 {
-    max-height: 160px;
+    max-height: 250px;
     overflow:hidden;
 }
 
@@ -78,7 +78,7 @@
   line-height: 1.4;
   opacity: .8;
   position: absolute;
-  top: 170px;
+  bottom: 104px;
   right: 10px;
 }
 
@@ -89,7 +89,7 @@
   line-height: 1.4;
   opacity: .8;
   position: absolute;
-  top: 190px;
+  bottom: 84px;
   right: 10px;
 
 }
