--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -27,23 +27,17 @@
 
 </div>
 
-<section class="carousel slide" data-ride="carousel" id="postsCarousel">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="container  carousel-inner">
+<section class="mx-3 carousel slide" data-ride="carousel" id="postsCarousel">
+      <div class="carousel-inner">
         <% @recommended_events.each_with_index do |event, index| %>
-          <div class="row row-equal carousel-item <%= index == 0 ? 'active' : '' %>">
-              <div class="col-md-4">
+          <div class="carousel-item <%= index == 0 ? 'active' : '' %>">
                   <div class="card">
                       <%= render "pages/caroussel", event: event %>
                   </div>
               </div>
-          </div>
         <%end %>
 
       </div>
-    </div>
-  </div>
 </section>
 
  <script>
