--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,7 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700i|Rubik:500,700|Source+Sans+Pro&display=swap" rel="stylesheet"');
 @import url('https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Kalam|Mansalva|Merienda|Sedgwick+Ave|Yesteryear&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet"');
 
 // Define fonts for body and headers
 $body-font: "Lato", "Helvetica", "sans-serif";
