--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,7 +13,7 @@
 .home-video-wrapper {
 height: 100vh;
 display: flex;
-padding: 350px 0;
+padding: 314px 0;
 }
 
 
@@ -24,10 +24,12 @@ padding: 350px 0;
   padding-left: 15px;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 50px;
+  font-size: 40px;
   font-weight: bold;
   color: #F7FFF7;
-  font-family: 'Kalam', cursive;
+  margin-bottom: 23px;
+  // font-family: 'Kalam', cursive;
+  font-family: 'Rock Salt', cursive;
 }
 
 
