--- a/app/views/pages/scan_events.html.erb
+++ b/app/views/pages/scan_events.html.erb
@@ -1,16 +1,10 @@
-
-<div class="cta">
-<h2 align="center">Scanning your location and importing your Spotify playlists</h2>
-</div>
-<div class="logo">
-</div>
+<div class="cta"><h2 align="center">Scanning your location and importing your Spotify playlists</h2></div>
+<div class="logo"></div>
 <div class="outer-circle"></div>
 <div class="outer-circle-2"></div>
-
-
 
 <script>
   window.setTimeout(function(){
     window.location.href = "/events" + window.location.search;
-  }, 2300);
+  }, 2000);
 </script>
