--- a/app/views/shared/_library_card.html.erb
+++ b/app/views/shared/_library_card.html.erb
@@ -3,14 +3,13 @@
     <h2 class="max-lines"><%= locals[:track].name %></h2>
       <h1 class="max-lines"><%= locals[:track].artists.map {|artist| artist.name }.join(", ") %></h1>
       <em><p><%= "Added at #{locals[:track].events.first.artist} concert" %></p></em>
-
       <% unless locals[:likes].nil? %>
         <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
       <% end %>
   </div>
   <% unless locals[:track].artists.empty? %>
-    <% if locals[:track].artists.first.photo.attached? %>
-      <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
+    <% unless locals[:track].image_url.nil? %>
+      <%= cl_image_tag locals[:track].image_url, crop: :fill %>
     <% else %>
       <%= image_tag "sample_1.png" %>
     <% end %>
