--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,10 +1,7 @@
-<div class="cta">
-   <h2>Create your new playlist on Spotify!</h2>
-</div>
-
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
+    <div class="cta"><h2>Create your new playlist on Spotify!</h2></div>
       <%= form_for :playlist, as: :get, url: export_path, method: :get, html: { class: "new_post", id: "new_post" } do |f| %>
         <div class="form-group">
           <%= f.text_field :name, class: 'form-control', placeholder: "Type playlist name" %>
