index.html fixed

--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -22,33 +22,26 @@
   font-size: 23px;
   font-weight: bold;
   margin-top: 40px;
-  margin-left: 20px;
-  margin-right: 20px;
   margin-bottom: 10px;
-  color: #E4C1F9;
-
+  color: $sp-orange;
 }
 
 .cta h2 {
   font-size: 23px;
   font-weight: bold;
   margin-top: 40px;
-  margin-left: 5px;
-  margin-right: 5px;
   margin-bottom: 20px;
-  color: #E4C1F9;
-
+  color: $sp-orange;
+  text-align: center;
 }
 
 .cta h1 {
   font-size: 20px;
   font-weight: bold;
   margin-top: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
   color: $white;
   opacity: 0.9;
-
+  text-align: center;
 }
 
 
