--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,16 +1,16 @@
 
 .navbar-light .navbar-nav .active > .nav-link {
-  color: $light-purple;
+  color: $sp-orange;
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: $light-purple;
+  color: $sp-orange;
 
 }
 
 .navbar-plug {
   justify-content: space-between;
-  background: $black;
+  background: #0f0017d1;
 }
 
 .navbar-plug .navbar-collapse {
