--- a/app/assets/stylesheets/pages/_button.scss
+++ b/app/assets/stylesheets/pages/_button.scss
@@ -30,7 +30,7 @@
   padding: 8px 24px;
   border-radius: 4px;
   font-weight: bold;
-  background: #734B6D;
+  background: #e84a5f;
   opacity: 0.9;
   transition: background 0.3s ease;
   // position: absolute;
@@ -44,7 +44,7 @@
 }
 
 .btn-gradient:hover {
-  background: #E4C1F9;;
+  background: #df7684;;
   color: white;
   text-decoration: none;
 }
