--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,29 +9,24 @@
  z-index: -2;
 }
 
-
 .home-video-wrapper {
-height: 100vh;
+height: 93vh;
 display: flex;
 padding: 314px 0;
 }
-
-
-
 
 .home h1 {
   margin: 0;
   padding-left: 15px;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 40px;
+  font-size: 80px;
   font-weight: bold;
   color: #F7FFF7;
   margin-bottom: 23px;
   // font-family: 'Kalam', cursive;
-  font-family: 'Rock Salt', cursive;
+  font-family: 'Kaushan Script', cursive;
 }
-
 
 .home p {
   padding-left: 15px;
