--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
     <meta name="mobile-web-app-capable"  content="yes">
     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
     <%= render 'shared/ios_pwa_links' %>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Baloo+Paaji+2|Kaushan+Script|Monoton|PT+Serif|Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
       <script>
