--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="home-video-wrapper">
   <%= video_tag "concert.mp4", autoplay: "", loop: "", muted: "", playsinline: '', class: 'home_video' %>
   <div class="home">
-  <h1><strong>PLUG</strong></h1>
-  <p >Your next Spotify playlist in a heartbeat!</p>
+  <h1><strong>Festivify</strong></h1>
+  <p >Find popular songs in your music festival</p>
   <%= link_to "See events", scan_events_path, class: "btn btn-gradient", id: "event-index" %>
   </div>
 </div>
