--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -37,14 +37,14 @@ transform: scale(1.1);
   font-size: 20px;
   font-weight: bold;
   margin: 0;
-  color: #E4C1F9;
+  color: $sp-orange;
   overflow-wrap: break-word;
 }
 
 
 .card-product p {
   font-size: 12px;
-  color: #E4C1F9;
+  color: $sp-orange;
   line-height: 1.4;
   opacity: .7;
   // margin-bottom: 0;
@@ -103,7 +103,7 @@ transform: scale(1.1);
   font-size: 18px;
   font-weight: bold;
   margin: 0;
-  color: #E4C1F9;
+  color: $sp-orange;
   width: 160px;
 }
 
@@ -154,7 +154,7 @@ transform: scale(1.1);
 }
 
 .card-product .card-product-infos .star-card a:hover {
-  color: #E4C1F9;
+  color: $sp-orange;
   text-decoration: none;
 }
 
@@ -203,7 +203,7 @@ transform: scale(1.1);
   @for $i from 0 through $bars {
       .bar:nth-child(#{$i}) {
           $saturation: 100 - (($i + 1) * $multiplier);
-          background-color: #E4C1F9;
+          background-color: $sp-orange;
           opacity: .3;
           animation: grow#{$i} #{random(700) + 1500}ms alternate infinite;
       }
@@ -258,9 +258,9 @@ transform: scale(1.1);
   z-index: 1000;
 }
 
-
-
 .card-product-event img {
+  position: absolute;
+  right: 16px;
   height: 100px;
   width: 100px;
   object-fit: cover;
@@ -277,14 +277,14 @@ transform: scale(1.1);
   font-size: 20px;
   font-weight: bold;
   margin: 0;
-  color: #E4C1F9;
+  color: $sp-orange;
   width: 190px;
 }
 
 
 .card-product-event p {
   font-size: 12px;
-  color: #E4C1F9;
+  color: $sp-orange;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
@@ -293,20 +293,19 @@ transform: scale(1.1);
 }
 
 .card-product-event {
-
   .confirm-button {
     position: absolute;
-    right: 15px;
-    bottom: 0px;
+    right: 16px;
+    bottom: -5px;
     width: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #734B6D;
+    background-color: rgb(145, 87, 0);
     border: none;
     color: white;
     height: 28px;
-    text-align: center;
+    text-align: center; 
     text-decoration: none;
     // display: inline-block;
     font-size: 16px;
@@ -326,7 +325,7 @@ transform: scale(1.1);
 }
 
 .card-product-event:hover .confirm-button {
-  background: #E4C1F9;
+  background: $sp-orange;
   color: white;
   transform: scale(1.1);
   transition: transform .8s;
@@ -361,7 +360,7 @@ transform: scale(1.1);
   font-size: 18px;
   font-weight: bold;
   margin-top: 10px;
-  color: #E4C1F9;
+  color: $sp-orange;
 
 }
 
