--- a/app/assets/stylesheets/pages/_scan_events.scss
+++ b/app/assets/stylesheets/pages/_scan_events.scss
@@ -1,9 +1,9 @@
 
 
 // colors
-$bg-color: #242331;
-$logo-color: #E4C1F9;
-$circle-color: #734B6D;
+$bg-color: #312723;
+$logo-color: $sp-orange;
+$circle-color: rgb(115, 90, 75);
 
 // fonts
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap');
@@ -59,11 +59,11 @@ $roboto-font: 'Source Sans Pro', sans-serif;
   }
   75%{
     transform: scale(1.2);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
   }
   100% {
     transform: scale(1.7);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
     border-color: transparent;
   }
 }
@@ -71,7 +71,7 @@ $roboto-font: 'Source Sans Pro', sans-serif;
 @keyframes outer-circle-2{
   0%{
     transform: scale(1.3);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
   }
   50%{
     transform: scale(1.7);
@@ -211,11 +211,11 @@ body{
   }
   75%{
     transform: scale(1.2);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
   }
   100% {
     transform: scale(1.7);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
     border-color: transparent;
   }
 }
@@ -223,7 +223,7 @@ body{
 @keyframes outer-circle-2{
   0%{
     transform: scale(1.3);
-    border: 1vmin solid #E4C1F9;
+    border: 1vmin solid $sp-orange;
   }
   50%{
     transform: scale(1.7);
