--- a/app/views/pages/scan_events.html.erb
+++ b/app/views/pages/scan_events.html.erb
@@ -1,4 +1,4 @@
-<div class="cta"><h2 align="center">Scanning your location and importing your Spotify playlists</h2></div>
+<div class="cta"><h2 align="center">Finding music festivals near you.</h2></div>
 <div class="logo"></div>
 <div class="outer-circle"></div>
 <div class="outer-circle-2"></div>
