sharefesta spotify button login changed

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,6 +1,6 @@
 {
   "background_color": "white",
-  "description": "Plug is a location based music curation app.",
+  "description": "Find popular songs in your music festival through Sharefesta",
   "display": "fullscreen",
   "icons": [
     {
@@ -11,7 +11,7 @@
     {},
     {}
   ],
-  "name": "Plug",
-  "short_name": "Plug",
+  "name": "Sharefesta",
+  "short_name": "Sharefesta",
   "start_url": "/"
 }
