--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -94,9 +94,6 @@ transform: scale(1.1);
   opacity: .8;
   margin-bottom: 5px;
   margin-top: 8px;
-
-
-
 }
 
 .card-product .card-product-infos h1 {
@@ -104,11 +101,11 @@ transform: scale(1.1);
   font-weight: bold;
   margin: 0;
   color: $sp-orange;
-  width: 160px;
+  width: 190px;
 }
 
 .card-product .card-product-infos h2 {
-  width: 120px;
+  width: 190px;
   font-size: 14px;
   margin: 0;
   color: $white;
@@ -124,27 +121,18 @@ transform: scale(1.1);
   margin: 0;
   width: 150px;
   color: $white;
-  width: 120px;
+  width: 190px;
   opacity: .8px;
 }
 
 .card-product .card-product-infos .star-card {
   font-size: 24px;
-  // position: absolute;
-  // right: 8px;
-  // bottom: 95px;
-  // width: 84px;
   display: flex;
   position: absolute;
   width: 40px;
   right: 15px;
   top: 20px;
-
-
 }
-
-
-
 .card-product .card-product-infos .star-card a {
   color: $white;
   text-decoration: none;
@@ -171,11 +159,8 @@ transform: scale(1.1);
   height: 28px;
   text-align: center;
   text-decoration: none;
-  // display: inline-block;
   font-size: 16px;
   border-radius: 5%;
-
-
 }
 
 .card-product .music {
@@ -192,6 +177,7 @@ transform: scale(1.1);
       align-items: flex-end;
       margin: 0;
   }
+
   .bar {
       width: 5px;
       min-height: 10px;
@@ -221,14 +207,13 @@ transform: scale(1.1);
 
 
 .card-product-event {
-  // height: 200px;
-  // width: 100%;
   background: black;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
+  padding: 7px;
   overflow: hidden;
 }
 
@@ -273,6 +258,23 @@ filter: grayscale(0);
 transform: scale(1.1);
 }
 
+
+.card-product-event-library {
+  position: absolute;
+  right: 16px;
+  height: 82px;
+  width: 82px;
+  object-fit: cover;
+  transition: transform .8s, filter 0.5s ease-in-out;
+  filter: grayscale(40%);
+}
+
+.card-product-event-library:hover {
+filter: grayscale(0);
+transform: scale(1.1);
+}
+
+
 .card-product-event h2 {
   font-size: 20px;
   font-weight: bold;
@@ -296,7 +298,7 @@ transform: scale(1.1);
   .confirm-button {
     position: absolute;
     right: 16px;
-    bottom: -5px;
+    bottom: 0px;
     width: 100px;
     display: flex;
     align-items: center;
