--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -2,8 +2,10 @@
   <div class="card-product-event-infos">
     <h2><%= event.venue %></h2>
     <p><em><%= "#{(event.distance_to([params[:lat], params[:lon]])).round(1)}km" %></em></p>
-    <h1><%= event.artist %></h1>
-    <p><%= event.address %></p>
+    <% unless event.sub_event %>
+      <h1><%= event.artist %></h1>
+      <p><%= event.address %></p>
+      <% end %>
   </div>
   <% if event.photo.attached? %>
     <%= cl_image_tag event.photo.key, crop: :fill %>
