--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,11 +54,20 @@
               startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
               });
             }, function(error) {
-              clearTimeout(location_timeout);
-              geolocFail();
+              const currentLatitude = 35.642927;
+              const currentLongitude = 139.825334;
+              const startButtons = document.querySelectorAll("#event-index");
+              startButtons.forEach((startButton)=>{
+              startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+              });
             });
           } else {
-            geolocFail();
+            const currentLatitude = 35.642927;
+            const currentLongitude = 139.825334;
+            const startButtons = document.querySelectorAll("#event-index");
+            startButtons.forEach((startButton)=>{
+            startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+            });
           }
         // }
       }
