--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,42 +35,56 @@
   </head>
   <body>
       <script>
+        function sleep(ms) {
+          return new Promise(resolve => setTimeout(resolve, ms));
+        }
         function findMe() {
         console.log("getting geolocation")
-        // const urlParams = new URLSearchParams(window.location.search);
-        // const myLat = urlParams.get('lat');
-        // console.log("top");
-        // if (myLat === null) {
-          if(navigator.geolocation) {
-            //dummy one
-            navigator.geolocation.getCurrentPosition(function () {}, function () {}, {});
-            //working one
-            navigator.geolocation.getCurrentPosition(function(position) {
-              const currentLatitude = position.coords.latitude;
-              const currentLongitude = position.coords.longitude;
-              // window.location.replace(`${window.location}?lat=${currentLatitude}&lon=${currentLongitude}`);
+  //      const newStartButtonText = document.querySelector(".btn.btn-gradient").text;
+          const geo = navigator.geolocation
+          document.addEventListener('DOMContentLoaded',
+          (event) => {
+            if(geo) {
+
+              //dummy one
               const startButtons = document.querySelectorAll("#event-index");
-              startButtons.forEach((startButton)=>{
-              startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+              const newStartButtonText = document.querySelector(".btn.btn-gradient");
+              console.log("if navigator.geolocation has some coordinates");
+              console.log(geo);
+              geo.getCurrentPosition(function () {}, function () {}, {});
+              //working one
+              geo.getCurrentPosition(function(position) {
+                const currentLatitude = position.coords.latitude;
+                console.log(currentLatitude);
+                const currentLongitude = position.coords.longitude;
+                console.log(currentLongitude);
+                // window.location.replace(`${window.location}?lat=${currentLatitude}&lon=${currentLongitude}`);
+                console.log(startButtons);
+                console.log(newStartButtonText);
+                startButtons.forEach((startButton)=>{
+                startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+                newStartButtonText.text = "See Events";
+                });
+              }, function(error) {
+                console.log("if navigator.geolocation has errors");
+                const currentLatitude = 35.642927;
+                const currentLongitude = 139.825334;
+                startButtons.forEach((startButton)=>{
+                startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+                newStartButtonText.text = "See Events";
+                });
               });
-            }, function(error) {
+            } else {
               const currentLatitude = 35.642927;
               const currentLongitude = 139.825334;
-              const startButtons = document.querySelectorAll("#event-index");
+              console.log("if navigator.geolocation is false");
               startButtons.forEach((startButton)=>{
               startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
+              newStartButtonText.text = "See Events";
               });
-            });
-          } else {
-            const currentLatitude = 35.642927;
-            const currentLongitude = 139.825334;
-            const startButtons = document.querySelectorAll("#event-index");
-            startButtons.forEach((startButton)=>{
-            startButton.attributes.href.value = `${startButton.attributes.href.value}?lat=${currentLatitude}&lon=${currentLongitude}`;
-            });
-          }
-        // }
-      }
+            }
+          })
+        }
       findMe();
       </script>
     <%= render 'shared/navbar' %>
