--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <h1><strong>Sharefesta</strong></h1>
     <p >Find popular songs in your music festival</p>
     <% if user_signed_in? %>
-      <%= link_to "See events", scan_events_path, class: "btn btn-gradient", id: "event-index" %>
+      <%= link_to "Finding your location..", scan_events_path, class: "btn btn-gradient", id: "event-index" %>
     <% else %>
       <%= link_to "Continue with Spotify", api_v1_login_path, class: "btn btn-spotify" %>
     <% end %>
