--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
  <div class="row justify-content-center">
-    <%= link_to "Add tracks", library_path, class: "btn btn-gradient", id: 'event-index' %>
+    <%= link_to "Add tracks", library_path, class: "btn btn-gradient", id: 'event-index-show' %>
   </div>
 </div>
 
