--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -8,6 +8,16 @@
 
 }
 
+.cta-message p {
+  font-size: 16px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  color: $white;
+  opacity: 1.0;
+
+}
+
 .cta h4 {
   font-size: 17px;
   margin-left: 20px;
