--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,11 +4,8 @@
   <div class="cta">
     <p align="center"><%= "#{@event.users.count} people at #{@event.artist} concert at #{@event.venue} like tracks below in Spotify"%></p>
   </div>
-</div>
-
-<div class="container">
- <div class="row justify-content-center">
-    <%= link_to "Add tracks", library_path, class: "btn btn-gradient", id: 'event-index-show' %>
+  <div class="cta-message">
+    <p align="center">Mark the songs you like to export to the new playlist</p>
   </div>
 </div>
 
@@ -21,6 +18,12 @@
     <%= render "shared/track_card", locals: { track: track, event: @event, likes: number_of_likes } %>
   <% end %>
 <% end %>
+
+<div class="container">
+ <div class="row justify-content-center">
+    <%= link_to "Create Playlist", library_path, class: "btn btn-gradient", id: 'event-index-show' %>
+  </div>
+</div>
 
 <script src="https://sdk.scdn.co/spotify-player.js"></script>
 <script>
