--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
-      <div class="cta"><h2>Create the new playlist on Spotify!</h2></div>
+      <div class="cta"><h2>Save the new playlist on Spotify!</h2></div>
     </div>
   </div>
   <div class="row justify-content-center">
